Bachelor/force-app/main/default/objects/Real_Estate__c/Real_Estate__c.object-meta.xml
<CustomObject>
    <label>Real Estate</label>
    <nameField>
        <displayFormat>RE-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Real Estates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>