Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>