Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>Real Estates</relationshipLabel>
    <relationshipName>Real_Estates</relationshipName>
    <type>Lookup</type>
</CustomField>