Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Real Estates (Buyer)</relationshipLabel>
    <relationshipName>Bought_Real_Estates</relationshipName>
    <type>Lookup</type>
</CustomField>