Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Comission_for_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Comission_for_Buyer__c</fullName>
    <label>Comission for Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>