Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>