Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Living_Space__c.field-meta.xml
<CustomField>
    <fullName>Living_Space__c</fullName>
    <label>Living Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>