Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <label>Location Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>