Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Object_Condition__c.field-meta.xml
<CustomField>
    <fullName>Object_Condition__c</fullName>
    <label>Object Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neubau</fullName>
            </value>
            <value>
                <fullName>Neuwertig</fullName>
            </value>
            <value>
                <fullName>Gepflegt</fullName>
            </value>
            <value>
                <fullName>Renovierungsbedürftig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>