Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Object_Description__c.field-meta.xml
<CustomField>
    <fullName>Object_Description__c</fullName>
    <label>Object Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>