Bachelor/force-app/main/default/objects/Real_Estate__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>