Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Rent_only__c.field-meta.xml
<CustomField>
    <fullName>Rent_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent only</label>
    <type>Checkbox</type>
</CustomField>