Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <label>Rooms</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>