Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Real Estates</relationshipLabel>
    <relationshipName>Real_Estates</relationshipName>
    <type>Lookup</type>
</CustomField>