Bachelor/force-app/main/default/objects/Real_Estate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einfamilienhaus</fullName>
            </value>
            <value>
                <fullName>Grundstück</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Reihenhaus</fullName>
            </value>
            <value>
                <fullName>Eigentumswohnung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>